examples/pos/issue1186.effekt
effect bar(): Int

def method{b: bar} = println(b.bar())
def main() = try {
  b.method()
} with b: bar { resume(42) }