examples/neg/object_operation_annotation.effekt
interface Foo { def bar(): Int }

def main() = {
  def obj = new Foo {
    def bar(): Int = 42
  }

  println(obj.bar())
}